# exbot_xi

./: CMakeLists.txt  README.md  package.xml
exbotxi_bringup/: CMakeLists.txt  package.xml
exbotxi_bringup/concert/: bringup.concert  shortcut.concert
exbotxi_bringup/config/: diagnostics.yaml  fake_turtlebot_arbotix.yaml  laser_filter.yaml
exbotxi_bringup/launch/: 2dsensor.launch  3dsensor.launch  exbotxi.launch  fake_exbotxi.launch  fake_turtlebot.launch  minimal.launch
exbotxi_bringup/launch/include/: hokuyo_2d_sensor.launch.xml  kinect_rgbd_camera.launch.xml  paired_private.launch.xml  rplidar_2d_sensor.launch.xml
exbotxi_bringup/launch/includes/: hokuyo_2d_sensor.launch.xml  hokuyo_urg_2d_sensor.launch.xml  kinect_rgbd_camera.launch.xml  laser_filter.launch.xml  paired_private_full.launch.xml  (+3 more)
exbotxi_bringup/param/: mux.yaml  smoother.yaml
exbotxi_bringup/scripts/: startup.sh
exbotxi_description/: CMakeLists.txt  package.xml
exbotxi_description/launch/: robot_description.launch.xml
exbotxi_description/meshes/: 200_bar.STL  base_frame.STL  irobot_create.STL  xtion_pro_live.STL
exbotxi_description/meshes/create/: base_frame.STL  create_base.dae  plate0.STL  plate1.STL
exbotxi_description/meshes/kobuki/: base_frame.STL  plate0.STL  plate1.STL
exbotxi_description/urdf/: create_base.urdf.xacro  create_frame.urdf.xacro  exbotxi.urdf.xacro  exbotxi_body.urdf.xacro  exbotxi_create.urdf.xacro  exbotxi_kobuki.urdf.xacro  irobot_create.urdf.xacro  kobuki_frame.urdf.xacro  properties.urdf.xacro  xtion_pro.urdf.xacro
exbotxi_example/: .pydevproject  CMakeLists.txt  package.xml
exbotxi_example/nodes/: control.cpp  control.py  move.cpp  move.py
exbotxi_nav/: CMakeLists.txt  package.xml
exbotxi_nav/config/: global_costmap_params.yaml  local_costmap_params.yaml
exbotxi_nav/config/default/: global_costmap_params.yaml  gmapping.yaml  hector_mapping.yaml
exbotxi_nav/config/turtlebot/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
exbotxi_nav/config/ust10lx/: costmap_common_params.yaml  gmapping.yaml  hector_mapping.yaml  local_costmap_params.yaml
exbotxi_nav/launch/: amcl_demo.launch  fake_amcl.launch  gmapping_demo.launch  hector_mapping_demo.launch
exbotxi_nav/launch/includes/: amcl.launch.xml  gmapping.launch.xml  hector_mapping.launch.xml  move_base.launch.xml
exbotxi_nav/maps/: lamda327_map.pgm  lamda327_map.yaml
exbotxi_rviz/: CMakeLists.txt  package.xml
exbotxi_rviz/launch/: display_robot.launch  view_mobile.launch  view_model.launch  view_navigation.launch  view_robot.launch
exbotxi_rviz/rviz/: mobile.rviz  model.rviz  nav.rviz  robot.rviz  sim.rviz  sim_static.rviz
exbotxi_teleop/: CMakeLists.txt  package.xml
exbotxi_teleop/launch/: keyboard_teleop.launch
exbotxi_teleop/nodes/: keyboard_teleop.py
(+3 files in other folders)
