<?xml version="1.0"?>
<package>
  <name>exbotxi_nav</name>
  <version>0.0.0</version>
  <description>The exbotxi_nav package</description>
  
  <license>BSD</license>
  <url type="website">http://blog.exbot.net</url>
  <author email="yuanboshe@126.com">Yuanbo She</author>
  <maintainer email="yuanboshe@126.com">Yuanbo She</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>