<?xml version="1.0"?>
<package>
  <name>exbotxi_teleop</name>
  <version>0.0.0</version>
  <description>The exbotxi_teleop package</description>
  
  <license>BSD</license>
  <url type="website">http://blog.exbot.net</url>
  <author email="yuanboshe@126.com">Yuanbo She</author>
  <maintainer email="yuanboshe@126.com">Yuanbo She</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
</package>